@@ -1,5 +1,7 @@
 2000-02-22  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Frame/Michelle.pm: Add flag_from_bits
+
 	* Inst/CGS4.pm (start_msg_sys): Use ORACDR_TMP
 
 	* Inst/IRCAM.pm (start_msg_sys): Use ORACDR_TMP
